@@ -23,12 +23,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
@@ -51,5 +45,66 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.4.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>5.4.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.11.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <version>3.12.4</version> <!-- 使用最新稳定版本 -->
+      <scope>test</scope>
+    </dependency>
+
+<!--    <dependency>-->
+<!--      <groupId>net.bytebuddy</groupId>-->
+<!--      <artifactId>byte-buddy</artifactId>-->
+<!--      <version>1.9.12</version>-->
+<!--    </dependency>-->
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <!-- for unit test -->
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+<!--        <configuration>-->
+<!--          <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>-->
+<!--          <excludes>-->
+<!--            <exclude>**/*IntegrationTest</exclude>-->
+<!--          </excludes>-->
+<!--        </configuration>-->
+      </plugin>
+
+<!--      <plugin>-->
+<!--        <artifactId>maven-failsafe-plugin</artifactId>-->
+<!--        <version>2.22.0</version>-->
+<!--        <configuration>-->
+<!--          <includes>-->
+<!--            <include>**/*IntegrationTest</include>-->
+<!--          </includes>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+    </plugins>
+  </build>
 </project>
